feat: set i18n configuration and cofig svelte and prettier

--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "preview": "vite preview",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
-    "lint": "prettier --check . && eslint .",
-    "format": "prettier --write ."
+    "lint": "eslint {src,test}/*/**/*.{ts,svelte}",
+    "format": "prettier --write .",
+    "lint:watch": "esw --watch --color --clear {src,test}/*/**/*.svelte"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^3.0.0",
@@ -17,6 +18,8 @@
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
     "@types/eslint": "^9.6.0",
     "@types/node": "^22.7.4",
+    "@typescript-eslint/eslint-plugin": "^8.8.0",
+    "@typescript-eslint/parser": "^8.8.0",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.0.0",
     "eslint-config-prettier": "^9.1.0",
