--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@fontsource-variable/raleway": "^5.1.0",
     "svelte-i18n": "^4.0.0"
   }
 }
