--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,11 +10,7 @@
     "sourceMap": true,
     "strict": true,
     "types": ["node"],
-    "moduleResolution": "bundler",
-    "baseUrl": "./",
-    "paths": {
-      "@/*": ["src/*"]
-    }
+    "moduleResolution": "bundler"
   }
   // Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
   // except $lib which is handled by https://kit.svelte.dev/docs/configuration#files
