--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/raleway": "^5.1.0",
+    "mongodb": "^6.9.0",
     "svelte-i18n": "^4.0.0"
   }
 }
