--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "@sveltejs/adapter-auto": "^3.0.0",
     "@sveltejs/kit": "^2.0.0",
     "@sveltejs/vite-plugin-svelte": "^3.0.0",
+    "@types/bcryptjs": "^2.4.6",
     "@types/eslint": "^9.6.0",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
@@ -27,6 +29,7 @@
     "eslint-import-resolver-alias": "^1.1.2",
     "eslint-plugin-svelte": "^2.36.0",
     "globals": "^15.0.0",
+    "jwt-decode": "^4.0.0",
     "postcss": "^8.4.47",
     "prettier": "^3.1.1",
     "prettier-plugin-svelte": "^3.1.2",
@@ -40,6 +43,8 @@
   "type": "module",
   "dependencies": {
     "@fontsource-variable/raleway": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "svelte-i18n": "^4.0.0"
   }
