--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/eslint": "^9.6.0",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.4",
+    "@types/nodemailer": "^6.4.16",
     "@typescript-eslint/eslint-plugin": "^8.8.0",
     "@typescript-eslint/parser": "^8.8.0",
     "autoprefixer": "^10.4.20",
@@ -46,6 +47,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
+    "nodemailer": "^6.9.15",
     "svelte-i18n": "^4.0.0"
   }
 }
