--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
     "nodemailer": "^6.9.15",
+    "rate-limiter-flexible": "^5.0.3",
     "svelte-i18n": "^4.0.0"
   }
 }
